# test_poetry

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  config.yaml  pyproject.toml  requirements.txt  test_app.py  test_pages.py
.github/workflows/: deploytoAksCluster.yml  main.yaml  main_lfta.yml
manifests/: deployment.yml  service.yml
static/js/: custom.js
templates/: index.html
tmp/: Churning_to_predict.csv
~/: .flake8
