[tool.poetry]
name = "lifetime"
version = "0.1.0"
description = ""
authors = ["Sylvain <sylvain@zyssman.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
pytest = "^6.2.5"
bios = "^0.1.2"
requests = "^2.26.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.9b0"
isort = "^5.9.3"
safety = "^1.10.3"
bandit = "^1.7.0"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
